[package]
name = "bezier-d2d"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry = {path = "../geometry", version="0.1"}


[dependencies.windows]
version = "0.39.0"
features = [
    "System",
    "Foundation",
    "Foundation_Numerics",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_UI_WindowsAndMessaging"
]