[package]
name = "bezier-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version ="3.2", features = ["derive"] }
geometry = {path = "../geometry", version="0.1"}
cairo-rs = "0.15.1"
gtk = { version = "0.4", package = "gtk4" }
glib = "0.15"
gio = "0.15" 

[build-dependencies]
gtk = { version = "*", package = "gtk4" }